--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
             "Realtime\\Push\\": "src/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": ">=5.4.0",
         "illuminate/support": ">=4.0"
