--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,5 @@
             "Realtime\\Push\\": "src/"
         }
     },
-    "minimum-stability": "stable",
-    "require": {
-        "php": ">=5.4.0",
-        "illuminate/support": ">=4.0"
-    }
+    "minimum-stability": "stable"
 }
